[tool.poetry]
name = "megaplan-update-parent-deal"
version = "0.1.0"
description = ""
authors = ["ZhakovArtyom <127793560+ZhakovArtyom@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic-settings = "^2.6.1"
uvicorn = "^0.32.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
